benswork/UARProject/force-app/main/default/objects/Apps__c/Apps__c.object-meta.xml
<CustomObject>
    <description>Business Applications supporting agency operations</description>
    <label>App</label>
    <nameField>
        <label>Application Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Apps</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>