benswork/UARProject/force-app/main/default/objects/Apps__c/fields/App_Description__c.field-meta.xml
<CustomField>
    <fullName>App_Description__c</fullName>
    <description>Description of the App</description>
    <label>App Description</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>