benswork/UARProject/force-app/main/default/objects/Apps__c/fields/Display_App_Description__c.field-meta.xml
<CustomField>
    <fullName>Display_App_Description__c</fullName>
    <description>App description which would be displayed in the community App exchange page</description>
    <label>Display App Description</label>
    <length>125</length>
    <type>Text</type>
</CustomField>