benswork/UARProject/force-app/main/default/objects/Apps__c/fields/Display_App_Name__c.field-meta.xml
<CustomField>
    <fullName>Display_App_Name__c</fullName>
    <description>App Name which will be displayed on Community app Exchange page</description>
    <inlineHelpText>Display App Name as it should show in the Community Portal</inlineHelpText>
    <label>Display App Name</label>
    <length>250</length>
    <type>Text</type>
</CustomField>