benswork/UARProject/force-app/main/default/objects/Apps__c/fields/Display_Graphics__c.field-meta.xml
<CustomField>
    <fullName>Display_Graphics__c</fullName>
    <description>Field to capture the screen shots of the app</description>
    <label>Display Graphics</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>