benswork/UARProject/force-app/main/default/objects/Apps__c/fields/Group_Helptext__c.field-meta.xml
<CustomField>
    <fullName>Group_Helptext__c</fullName>
    <label>Group Helptext</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>