benswork/UARProject/force-app/main/default/objects/Apps__c/fields/Hide_from_Display__c.field-meta.xml
<CustomField>
    <fullName>Hide_from_Display__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Hide from Display</label>
    <type>Checkbox</type>
</CustomField>