benswork/UARProject/force-app/main/default/objects/Apps__c/fields/Image_URL__c.field-meta.xml
<CustomField>
    <fullName>Image_URL__c</fullName>
    <inlineHelpText>Please refer to Create App Icon cheat sheet and set the image for the app in the app exchange</inlineHelpText>
    <label>Image URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>