benswork/UARProject/force-app/main/default/objects/Apps__c/fields/In_Production_Date__c.field-meta.xml
<CustomField>
    <fullName>In_Production_Date__c</fullName>
    <description>The date from when the App is in production</description>
    <label>In Production Date</label>
    <type>Date</type>
</CustomField>