benswork/UARProject/force-app/main/default/objects/Apps__c/fields/Last_User_Scan__c.field-meta.xml
<CustomField>
    <fullName>Last_User_Scan__c</fullName>
    <label>Last User Scan</label>
    <type>DateTime</type>
</CustomField>