benswork/UARProject/force-app/main/default/objects/Apps__c/fields/Org__c.field-meta.xml
<CustomField>
    <fullName>Org__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Name of the Org where the application is available</description>
    <label>Org</label>
    <referenceTo>Org__c</referenceTo>
    <relationshipName>Apps</relationshipName>
    <type>Lookup</type>
</CustomField>