benswork/UARProject/force-app/main/default/objects/Apps__c/fields/Platform__c.field-meta.xml
<CustomField>
    <fullName>Platform__c</fullName>
    <description>Platforms in which the business Apps are built</description>
    <label>Platform</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SFDC</fullName>
                <default>true</default>
                <label>SFDC</label>
            </value>
            <value>
                <fullName>MS Dynamics</fullName>
            </value>
            <value>
                <fullName>AWS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>