benswork/UARProject/force-app/main/default/objects/Apps__c/fields/Role_Helptext__c.field-meta.xml
<CustomField>
    <fullName>Role_Helptext__c</fullName>
    <label>Role Helptext</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>