benswork/UARProject/force-app/main/default/objects/Apps__c/fields/Screenshot1__c.field-meta.xml
<CustomField>
    <fullName>Screenshot1__c</fullName>
    <label>Screenshot1</label>
    <type>Url</type>
</CustomField>