benswork/UARProject/force-app/main/default/objects/Apps__c/fields/Screenshot2__c.field-meta.xml
<CustomField>
    <fullName>Screenshot2__c</fullName>
    <label>Screenshot2</label>
    <type>Url</type>
</CustomField>