benswork/UARProject/force-app/main/default/objects/Apps__c/fields/Screenshot3__c.field-meta.xml
<CustomField>
    <fullName>Screenshot3__c</fullName>
    <label>Screenshot3</label>
    <type>Url</type>
</CustomField>