benswork/UARProject/force-app/main/default/objects/Apps__c/fields/Show_Case__c.field-meta.xml
<CustomField>
    <fullName>Show_Case__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show Case?</label>
    <type>Checkbox</type>
</CustomField>