benswork/UARProject/force-app/main/default/objects/Apps__c/fields/Show_UAR__c.field-meta.xml
<CustomField>
    <fullName>Show_UAR__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show UAR?</label>
    <type>Checkbox</type>
</CustomField>