benswork/UARProject/force-app/main/default/objects/Apps__c/fields/Start_URL__c.field-meta.xml
<CustomField>
    <fullName>Start_URL__c</fullName>
    <label>Start URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>