benswork/UARProject/force-app/main/default/objects/Apps__c/fields/Tier_2_Support__c.field-meta.xml
<CustomField>
    <fullName>Tier_2_Support__c</fullName>
    <inlineHelpText>If Tier 2 support is required, reassign the Case to this queue.</inlineHelpText>
    <label>Tier 2 Support</label>
    <length>125</length>
    <type>Text</type>
</CustomField>