benswork/UARProject/force-app/main/default/objects/Apps__c/listViews/Employee_Org_Apps.listView-meta.xml
<ListView>
    <fullName>Employee_Org_Apps</fullName>
    <columns>NAME</columns>
    <columns>App_Description__c</columns>
    <columns>App__c</columns>
    <columns>Org__c</columns>
    <columns>Stage__c</columns>
    <columns>In_Production_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Org__c</field>
        <operation>contains</operation>
        <value>Employee</value>
    </filters>
    <label>Employee Org Apps</label>
</ListView>